--- a/js/views/query/templates/SelectCriteria.html
+++ b/js/views/query/templates/SelectCriteria.html
@@ -102,11 +102,7 @@
                     DATA DICTIONARY
                     <i class="fa fa-caret-right"></i>
                   </a>
-                  <a
-                    class="btn btn-help"
-                    href="/query/faqs.html"
-                    target="_blank"
-                  >
+                  <a class="btn btn-help" href="./faqs.html" target="_blank">
                     <!-- <i class="fa fa-question-circle fa-3" aria-hidden="true"></i> -->
                     BUILDER FAQS
                     <i class="fa fa-caret-right"></i>
