--- a/assets/less/pvqt.less
+++ b/assets/less/pvqt.less
@@ -35,6 +35,17 @@ h3 {
   margin-bottom: 10px;
 }
 
+.container {
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+@media (min-width: 1200px) {
+  .container {
+    width: 1020px;
+  }
+}
+
 h2.select-category {
   margin-bottom: 3px;
 }
