--- a/assets/less/pvqt.less
+++ b/assets/less/pvqt.less
@@ -902,3 +902,28 @@ button.btn-lg {
 .tt-suggestion p {
   margin: 0;
 }
+
+#previewResults {
+  #quick-search {
+    .input-group {
+      justify-content: left;
+    }
+    .form-inline {
+      padding-top: 7px !important;
+    }
+  }
+}
+
+#criteria-section {
+  #search-summary {
+    .submit-search {
+      width: unset;
+      height: unset;
+    }
+  }
+  #conditions {
+    i.q {
+      margin-left: 5px;
+    }
+  }
+}
