--- a/js/views/query/templates/SelectCriteria.html
+++ b/js/views/query/templates/SelectCriteria.html
@@ -96,13 +96,17 @@
                 <div>
                   <a
                     class="btn-data-dict btn btn-help"
-                    href="/query/data_dictionary.html"
+                    href="https://community.patentsview.org/query/data-dictionary"
                     target="_blank"
                   >
                     DATA DICTIONARY
                     <i class="fa fa-caret-right"></i>
                   </a>
-                  <a class="btn btn-help" href="./faqs.html" target="_blank">
+                  <a
+                    class="btn btn-help"
+                    href="https://community.patentsview.org/query/builder-faqs"
+                    target="_blank"
+                  >
                     <!-- <i class="fa fa-question-circle fa-3" aria-hidden="true"></i> -->
                     BUILDER FAQS
                     <i class="fa fa-caret-right"></i>
