--- a/js/views/query/templates/SelectResults.html
+++ b/js/views/query/templates/SelectResults.html
@@ -3,17 +3,19 @@
     <div class="col-md-12 no-padding">
       <a
         class="btn btn-help pull-right"
-        href="/query/faqs.html"
+        href="https://community.patentsview.org/query/builder-faqs"
         target="_blank"
       >
-        <i class="fa fa-question-circle fa-3" aria-hidden="true"></i> Help
+        BUILDER FAQS
+        <i class="fa fa-caret-right"></i>
       </a>
       <a
         class="btn-data-dict btn btn-help pull-right"
-        href="/query/data_dictionary.html"
+        href="https://community.patentsview.org/query/data-dictionary"
         target="_blank"
       >
-        View Data Dictionary
+        DATA DICTIONARY
+        <i class="fa fa-caret-right"></i>
       </a>
     </div>
   </div>
