--- a/js/views/query/templates/PreviewResults.html
+++ b/js/views/query/templates/PreviewResults.html
@@ -3,17 +3,19 @@
     <div class="col-md-12">
       <a
         class="btn btn-help pull-right"
-        href="/query/faqs.html"
+        href="https://community.patentsview.org/query/builder-faqs"
         target="_blank"
       >
-        <i class="fa fa-question-circle fa-3" aria-hidden="true"></i> Help
+        BUILDER FAQS
+        <i class="fa fa-caret-right"></i>
       </a>
       <a
         class="btn-data-dict btn btn-help pull-right"
-        href="/query/data_dictionary.html"
+        href="https://community.patentsview.org/query/data-dictionary"
         target="_blank"
       >
-        View Data Dictionary
+        DATA DICTIONARY
+        <i class="fa fa-caret-right"></i>
       </a>
     </div>
   </div>
@@ -148,7 +150,7 @@
                       id="group"
                       name="group"
                       class="form-control"
-                      style="min-width: 300px"
+                      style="min-width: 250px"
                     >
                       <option>-Select Group-</option>
                     </select>
@@ -163,7 +165,7 @@
                       id="field"
                       name="field"
                       class="form-control"
-                      style="min-width: 300px"
+                      style="min-width: 250px"
                     >
                       <option>-Select Field-</option>
                     </select>
