update CSS relative path

--- a/assets/less/pvqt.less
+++ b/assets/less/pvqt.less
@@ -609,7 +609,7 @@ select.form-control {
   -moz-appearance: none;
   background-position: right 50%;
   background-repeat: no-repeat;
-  background-image: url("/assets/img/dropdown-arrow.png");
+  background-image: url("../img/dropdown-arrow.png");
   padding-left: 10px !important;
   height: 26px;
   line-height: 21px;
