fix spacing; update prod URLs

--- a/js/views/query/templates/PreviewResults.html
+++ b/js/views/query/templates/PreviewResults.html
@@ -3,7 +3,7 @@
     <div class="col-md-12">
       <a
         class="btn btn-help pull-right"
-        href="https://community.patentsview.org/query/builder-faqs"
+        href="https://www.patentsview.org/query/builder-faqs"
         target="_blank"
       >
         BUILDER FAQS
@@ -11,7 +11,7 @@
       </a>
       <a
         class="btn-data-dict btn btn-help pull-right"
-        href="https://community.patentsview.org/query/data-dictionary"
+        href="https://www.patentsview.org/query/data-dictionary"
         target="_blank"
       >
         DATA DICTIONARY
