update API link

--- a/js/views/query/templates/SelectCriteria.html
+++ b/js/views/query/templates/SelectCriteria.html
@@ -200,13 +200,13 @@
             (() => {
               const domain = window.location.hostname;
               let link = ''
-              if (domain === "http://www.patentsview.org") {
+              if (domain === "https://patentsviewcommunity.uat.air.org") {
                 link = 
-                  "https://www.patentsview.org/apis/api-endpoints"
+                  "https://patentsviewcommunity.uat.air.org/apis/api-endpoints"
                 
               } else {
                 link = 
-                  "https://patentsviewcommunity.uat.air.org/apis/api-endpoints"
+                  "https://patentsview.org/apis/api-endpoints"
               }
               const buttonLink = document.querySelector(
                 "#api-page-link"
